config-root/namespaces/jx-staging/nodey540/nodey540-nodey540-deploy.yaml
# Source: nodey540/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodey540-nodey540
  labels:
    draft: draft-app
    chart: "nodey540-1.0.7"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: nodey540-nodey540
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodey540-nodey540
    spec:
      containers:
        - name: nodey540
          image: "image-registry.openshift-image-registry.svc:5000/jx/nodey540:1.0.7"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
