config-root/namespaces/jx-staging/nodey540/nodey540-ingress.yaml
# Source: nodey540/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nodey540
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: nodey540
              servicePort: 80
      host: nodey540-jx-staging.apps-crc.testing
